fix jumpy header

--- a/src/css/frontend/blocks/_navigation.scss
+++ b/src/css/frontend/blocks/_navigation.scss
@@ -8,13 +8,18 @@ header .wp-block-navigation__responsive-container:not( .has-modal-open ) .wp-blo
 	&:nth-child( 5n+5 ) { --menuColour: var(--wp--preset--color--bur-green-dark); }
 
 	&:not( .wp-block-navigation__submenu-container .wp-block-navigation-item ) {
+
+		a.wp-block-navigation-item__content {
+			padding-bottom: 0.5rem;
+		}
+
 		&:after {
 			content: "";
 			display: block;
 			height: 0.5rem;
 			width: 100%;
 			position: absolute;
-			bottom: -0.5rem;
+			bottom: 0;
 		
 			background-image: 
 			linear-gradient(to right, var(--menuColour), var(--menuColour)),
@@ -23,6 +28,7 @@ header .wp-block-navigation__responsive-container:not( .has-modal-open ) .wp-blo
 			background-repeat: no-repeat;
 			background-size: 100%, 0;
 			transition: height var(--wp--custom--transition--hover-time) ease-in, background-size var(--wp--custom--transition--hover-time) ease-in;
+			pointer-events: none;
 		}
 
 		&:hover:after {
@@ -39,6 +45,7 @@ header .wp-block-navigation__responsive-container:not( .has-modal-open ) .wp-blo
 
 // Dropdown item hover effect.
 .wp-block-navigation__submenu-container {
+	border-top: none !important;
 	li {
 		transition: background-color var(--wp--custom--transition--hover-time) ease-in, color var(--wp--custom--transition--hover-time) ease-in;
 
@@ -122,7 +129,7 @@ html .wp-block-navigation__responsive-container.is-menu-open {
 }
 
 // Menu dropdown.
-.wp-block-navigation .has-child .wp-block-navigation-submenu__toggle[aria-expanded=true]~.wp-block-navigation__submenu-container {
-	border-radius: var(--wp--custom--border-radius--medium);
-	overflow: hidden;
+.wp-block-navigation .has-child .wp-block-navigation-submenu__toggle~.wp-block-navigation__submenu-container {
+	border-radius: 0 0 var(--wp--custom--border-radius--medium) var(--wp--custom--border-radius--medium);
+	overflow: hidden !important;
 }
