--- a/src/css/frontend/blocks/_site-logo.scss
+++ b/src/css/frontend/blocks/_site-logo.scss
@@ -2,19 +2,3 @@
 	text-decoration: none !important;
 	background-image: none;
 }
-
-.wp-site-blocks > header {
-
-	.wp-block-site-logo img {
-		object-position: left;
-		object-fit: contain;
-		max-height: 5.3125rem;
-		transition: max-height var(--wp--custom--transition--hover-time);
-	}
-
-	&.is-squished {
-		.wp-block-site-logo img {
-			max-height: 3.125rem;
-		}
-	}
-}
